--- a/Laboratorios/Laboratorio3/Ejercicio2/Ej2.css
+++ b/Laboratorios/Laboratorio3/Ejercicio2/Ej2.css
@@ -30,20 +30,43 @@ h1{
     text-align: center;
 }
 
-nav{
+nav {
 
     width: 100%;
     height: auto;
 
     display: flex;
-    flex-direction: column;
-    flex-flow: wrap;
+    flex-flow: row wrap;
+    justify-content: flex-end;
 
 }
 
-.btn{
-    border: 1px solid black;
+.btn {
+    margin:  0.5em;
+    background: gray;
+    padding: 10px;
+    border: 10px;
+
+   
+    
 }
+
+.btn1{
+    margin:  0.5em;
+    background: blueviolet;
+    padding: 10px;
+    border: 10px;
+}
+
+.btn2{
+    margin:  0.5em;
+    background: firebrick;
+    padding: 10px;
+    border: 10px;
+}
+
+
+
 
 main{
     width: 60%;
@@ -58,9 +81,28 @@ main{
 
 }
 
+main hr{
+    width: 80%;
+   background: white;
+   height: 7px;
+   border: none;
+}
+
+main>img{
+    width: 50%;
+    height: auto;
+    margin: 1em;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+}
+
 main .logos{
     width: 100%;
-    height: ;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+
 }
 
 .logos>img{
@@ -89,3 +131,4 @@ footer{
     display: flex;
     justify-content: space-between
 }
+
