--- a/Laboratorios/Laboratorio4/Ej1.css
+++ b/Laboratorios/Laboratorio4/Ej1.css
@@ -23,6 +23,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-flow: none;
+      flex-flow: none;
 }
 
 h1 {
